[package]
name = "ChunkUtils"
version = "0.1.0"
authors = ["Olybear9 <olybear9@gmail.com>"]
edition = "2018"
private = true

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.46"
serde = { version = "1.0.118", features = [ "derive" ] }
serde_json = "1.0.61"
wasm-bindgen = { version = "0.2.69", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4.30"
