[package]
name = "ChunkUtils"
version = "0.1.0"
authors = ["Olybear9 <olybear9@gmail.com>"]
edition = "2018"
private = true

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
serde = { version = "1.0.137", features = [ "derive" ] }
serde_json = "1.0.79"
wasm-bindgen = { version = "0.2.87", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4.37"
